# ModalChess

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ablations.md  architecture.md  data_schema.md  experiment_plan.md  language_sidecar_schema.md
scripts/: audit_aux_language_sources.py  audit_comment_boilerplate.py  audit_comment_duplicates.py  audit_comment_informativeness.py  audit_comment_retrieval_sanity.py  audit_comment_source_families.py  audit_comment_source_style.py  audit_mate_keyword_coverage.py  audit_probe_text_realism.py  build_annotated_pgn_sidecar.py  build_aux_language_corpora.py  build_balanced_multisource_sidecar.py  build_clean_annotated_sidecar.py  build_comment_retrieval_eval_regime.py  build_comment_retrieval_eval_regime_v2.py  build_dedup_comment_eval.py  build_informative_annotated_sidecar.py  build_language_alignment_index.py  build_mate_sidecar.py  build_multisource_annotated_sidecar.py  build_pilot_from_pgn.py  build_probe_corpora.py  build_probe_targets.py  build_puzzle_sidecar.py  build_rationale_sidecar.py  build_shared_source_holdout_eval.py  build_source_holdout_eval.py  compare_retrieval_variants.py  enrich_with_lichess_eval.py  export_backbone_embeddings.py  fetch_aux_language_sources.py  fetch_more_annotated_sources.py  fetch_pilot_sources.py  lock_week4_reference_artifacts.py  normalize_chessgpt_corpus.py  report_annotated_sidecar.py  report_language_sidecar.py  report_pilot_dataset.py  report_probe_corpora.py  report_target_realism.py  (+7 more)
tests/: test_auxiliary_masks.py  test_board_encoder_shapes.py  test_dataset_builder.py  (+31 more)
(+152 files in other folders)
